@@ -1,18 +1,16 @@
 package org.fergoeqs.blps1.services;
 
+import org.fergoeqs.blps1.dto.ApplicationRequest;
+import org.fergoeqs.blps1.dto.ApplicationResponse;
 import org.fergoeqs.blps1.exceptions.ResourceNotFoundException;
-import org.fergoeqs.blps1.models.Applicant;
-import org.fergoeqs.blps1.models.Application;
-import org.fergoeqs.blps1.models.Resume;
-import org.fergoeqs.blps1.models.Vacancy;
-import org.fergoeqs.blps1.repositories.ApplicantRepository;
-import org.fergoeqs.blps1.repositories.ApplicationRepository;
-import org.fergoeqs.blps1.repositories.ResumeRepository;
-import org.fergoeqs.blps1.repositories.VacancyRepository;
+import org.fergoeqs.blps1.models.*;
+import org.fergoeqs.blps1.models.enums.ApplicationStatus;
+import org.fergoeqs.blps1.repositories.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -23,109 +21,136 @@ import java.util.stream.Collectors;
 public class ApplicationService {
     private static final Logger logger = LoggerFactory.getLogger(ApplicationService.class);
     private final ApplicationRepository applicationRepository;
-
     private final VacancyRepository vacancyRepository;
-
     private final ApplicantRepository applicantRepository;
-
     private final ResumeRepository resumeRepository;
 
-    public ApplicationService(ApplicationRepository applicationRepository, VacancyRepository vacancyRepository, ApplicantRepository applicantRepository, ResumeRepository resumeRepository) {
+    public ApplicationService(ApplicationRepository applicationRepository,
+                              VacancyRepository vacancyRepository,
+                              ApplicantRepository applicantRepository,
+                              ResumeRepository resumeRepository) {
         this.applicationRepository = applicationRepository;
         this.vacancyRepository = vacancyRepository;
         this.applicantRepository = applicantRepository;
         this.resumeRepository = resumeRepository;
     }
 
-    public Application createApplication(Long vacancyId, Long applicantId, Long resumeId, String coverLetter) {
+    public ApplicationResponse createApplication(ApplicationRequest request) {
         Application application = new Application();
 
-        Vacancy vacancy = vacancyRepository.findById(vacancyId)
-                .orElseThrow(() -> new ResourceNotFoundException("Vacancy not found with id: " + vacancyId));
-        application.setVacancy(vacancy);
+        Vacancy vacancy = vacancyRepository.findById(request.vacancyId())
+                .orElseThrow(() -> new ResourceNotFoundException("Vacancy not found"));
+        Applicant applicant = applicantRepository.findById(request.applicantId())
+                .orElseThrow(() -> new ResourceNotFoundException("Applicant not found"));
 
-        Applicant applicant = applicantRepository.findById(applicantId)
-                .orElseThrow(() -> new ResourceNotFoundException("Applicant not found with id: " + applicantId));
+        application.setVacancy(vacancy);
         application.setApplicant(applicant);
 
+        String warning = null;
         if (vacancy.isResumeRequired()) {
-            if (resumeId == null) {
-                application.setStatus("Resume Required");
-                return applicationRepository.save(application);
-            }
-            Resume resume = resumeRepository.findById(resumeId)
-                    .orElseThrow(() -> new ResourceNotFoundException("Resume not found with id: " + resumeId));
-            if (!resume.getApplicant().getId().equals(applicantId)) {
-                throw new RuntimeException("Resume does not belong to this applicant");
-            }
-            application.setResume(resume);
+            if (request.resumeId() == null) {
+                application.setStatus(ApplicationStatus.RESUME_REQUIRED);
+            } else {
+                Resume resume = resumeRepository.findById(request.resumeId())
+                        .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
 
-            if (!isResumeMatchingVacancy(resume, vacancy)) {
-                application.setStatus("Resume Not Matching");
-                return applicationRepository.save(application);
+                if (!resume.getApplicant().getId().equals(applicant.getId())) {
+                    throw new SecurityException("Resume doesn't belong to applicant");
+                }
+
+                application.setResume(resume);
+                if (!isResumeMatching(resume, vacancy)) {
+                    warning = "Резюме частично соответствует требованиям вакансии";
+                }
             }
         }
 
-        if (vacancy.isCoverLetterRequired()) {
-            if (coverLetter == null || coverLetter.trim().isEmpty()) {
-                application.setStatus("Cover Letter Required");
-                return applicationRepository.save(application);
-            }
-            application.setCoverLetter(coverLetter);
+        if (vacancy.isCoverLetterRequired() &&
+                (request.coverLetter() == null || request.coverLetter().isBlank())) {
+            application.setStatus(ApplicationStatus.COVER_LETTER_REQUIRED);
         } else {
-            application.setCoverLetter(coverLetter);
+            application.setCoverLetter(request.coverLetter());
         }
 
-        application.setStatus("Sent to Employer");
-        return applicationRepository.save(application);
+        if (application.getStatus() == null) {
+            application.setStatus(warning != null ?
+                    ApplicationStatus.PENDING_WITH_WARNING :
+                    ApplicationStatus.PENDING);
+        }
+
+        Application saved = applicationRepository.save(application);
+        return mapToResponse(saved);
     }
 
-    private boolean isResumeMatchingVacancy(Resume resume, Vacancy vacancy) {
-        if (vacancy.getKeywords() == null || vacancy.getKeywords().trim().isEmpty()) {
+    public List<ApplicationResponse> getApplicationsByVacancyId(Long vacancyId) {
+        return applicationRepository.findByVacancyId(vacancyId)
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+    public Optional<ApplicationResponse> getApplicationById(Long id) {
+        return applicationRepository.findById(id)
+                .map(this::mapToResponse);
+    }
+
+    public ApplicationResponse acceptApplication(Long applicationId) {
+        Application application = applicationRepository.findById(applicationId)
+                .orElseThrow(() -> new ResourceNotFoundException("Application not found"));
+
+        application.setStatus(ApplicationStatus.ACCEPTED);
+        Application updated = applicationRepository.save(application);
+
+        logger.info("Applicant {} accepted for vacancy {}",
+                updated.getApplicant().getName(),
+                updated.getVacancy().getTitle());
+
+        return mapToResponse(updated);
+    }
+
+    public ApplicationResponse rejectApplication(Long applicationId) {
+        Application application = applicationRepository.findById(applicationId)
+                .orElseThrow(() -> new ResourceNotFoundException("Application not found"));
+
+        application.setStatus(ApplicationStatus.REJECTED);
+        Application updated = applicationRepository.save(application);
+
+        logger.info("Applicant {} rejected for vacancy {}",
+                updated.getApplicant().getName(),
+                updated.getVacancy().getTitle());
+
+        return mapToResponse(updated);
+    }
+
+    private ApplicationResponse mapToResponse(Application application) {
+        return new ApplicationResponse(
+                application.getId(),
+                application.getStatus().name(),
+                application.getVacancy().getTitle(),
+                application.getApplicant().getName(),
+                application.getStatus().equals(ApplicationStatus.PENDING_WITH_WARNING) ?
+                        "Резюме частично соответствует требованиям" : null,
+                application.getCreatedAt() != null ?
+                        application.getCreatedAt() : LocalDateTime.now()
+        );
+    }
+
+    private boolean isResumeMatching(Resume resume, Vacancy vacancy) {
+        if (vacancy.getKeywords() == null || vacancy.getKeywords().isBlank()) {
             return true;
         }
 
-        Set<String> vacancyKeywords = Arrays.stream(vacancy.getKeywords().toLowerCase().split("\\s*,\\s*"))
+        Set<String> keywords = Arrays.stream(vacancy.getKeywords().split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
                 .collect(Collectors.toSet());
-        Set<String> resumeWords = Arrays.stream(resume.getContent().toLowerCase().split("\\s+"))
-                .collect(Collectors.toSet());
 
-        return vacancyKeywords.stream().anyMatch(resumeWords::contains);
-    }
+        if (keywords.isEmpty()) return true;
 
-    public List<Application> getApplicationsByVacancyId(Long vacancyId) {
-        return applicationRepository.findByVacancyId(vacancyId);
-    }
+        long matches = keywords.stream()
+                .filter(keyword -> resume.getContent().toLowerCase().contains(keyword.toLowerCase()))
+                .count();
 
-    public Optional<Application> getApplicationById(Long id) {
-        return applicationRepository.findById(id);
-    }
-
-    public Application acceptApplication(Long applicationId) {
-        Application application = applicationRepository.findById(applicationId)
-                .orElseThrow(() -> new ResourceNotFoundException("Application not found with id: " + applicationId));
-        application.setStatus("Accepted");
-        application = applicationRepository.save(application);
-
-        logger.info("Notification: Applicant {} has been invited for an interview for vacancy '{}'. Contact: {}",
-                application.getApplicant().getName(),
-                application.getVacancy().getTitle(),
-                application.getApplicant().getContactInfo());
-
-        return application;
-    }
-
-    public Application rejectApplication(Long applicationId) {
-        Application application = applicationRepository.findById(applicationId)
-                .orElseThrow(() -> new ResourceNotFoundException("Application not found with id: " + applicationId));
-        application.setStatus("Rejected");
-        application = applicationRepository.save(application);
-
-        logger.info("Notification: Applicant {} has been rejected for vacancy '{}'. Contact: {}",
-                application.getApplicant().getName(),
-                application.getVacancy().getTitle(),
-                application.getApplicant().getContactInfo());
-
-        return application;
+        return matches > keywords.size() / 2;
     }
 }
